# tapl-in-rust

./: .gitignore  Cargo.toml  README.md
src/: eval.rs  lib.rs  parser.rs  term.rs
src/unty_arith/: eval.rs  parser.rs  term.rs
tests/unty_arith/: 2.txt  3.txt  5.txt  8.txt
