[package]
name = "tapl"
authors = ["Sirui Mu <msrlancern@gmail.com>"]
version = "0.1.0"
edition = "2018"
description = "Implementation of the topics discussed in TaPL"
repository = "https://github.com/Lancern/tapl-in-rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "2", optional = true }

[features]
cli = ["clap"]
unty_arith = []

[[bin]]
name = "tapl-cli"
path = "src/bin/cli/main.rs"
required-features = ["cli", "unty_arith"]
